--- a/requirements.txt
+++ b/requirements.txt
@@ -15,6 +15,7 @@ contextlib2==0.5.4
 coverage==4.2
 cryptography==1.4
 cssselect==0.9.1
+dj-database-url==0.4.2
 django-bootstrap-pagination==1.6.2
 django-bootstrap3==8.0.0
 django-braces==1.9.0
