--- a/requirements.txt
+++ b/requirements.txt
@@ -35,6 +35,7 @@ mechanize==0.2.5
 mixpanel==4.3.1
 oauth2client==1.4.11
 pep8==1.7.0
+psycopg2==2.6.2
 pyOpenSSL==0.15.1
 pyasn1==0.1.7
 pyasn1-modules==0.0.5
